# ChangeLog for vserver-utils

  09 Jan 2006; Benedikt Böhm <hollow@gentoo.org> src/vncontext.c:
  Fix netmask handling

  09 Jan 2006; Benedikt Böhm <hollow@gentoo.org> scripts/lib/vps.sh,
  scripts/command/start.sh, scripts/pathconfig.in:
  Add network handling

  24 Dec 2005; Benedikt Böhm <hollow@gentoo.org> scripts/lib/vps.sh:
  Remove antiquated vdir and vdirbase symlinks

*vserver-utils-1.0.1 (23 Dec 2005)

  23 Dec 2005; Benedikt Böhm <hollow@gentoo.org> scripts/command/status.sh:
  Fix output of status command

  23 Dec 2005; Benedikt Böhm <hollow@gentoo.org> etc/vservers:
  Remove handling of guests on start/stop

  23 Dec 2005; Benedikt Böhm <hollow@gentoo.org> etc/vservers:
  Fix location of pathconfig

  23 Dec 2005; Benedikt Böhm <hollow@gentoo.org> configure.ac,
  scripts/Makefile.am, etc/Makefile.am:
  Fix 'make dist' target

  23 Dec 2005; Benedikt Böhm <hollow@gentoo.org> README:
  Add project homepage

  23 Dec 2005; Benedikt Böhm <hollow@gentoo.org> ChangeLog:
  Initial ChangeLog

*vserver-utils-1.0 (22 Dec 2005)

  22 Dec 2005; Benedikt Böhm <hollow@gentoo.org>
  Initial release of the development series (1.x)